--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,5 +1,6 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
-  License: none (public domain)
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
 */
 
 html, body, div, span, applet, object, iframe,
@@ -47,38 +48,133 @@ table {
 }
 
 /*
-  =============================================
+  ========================================
+  Custom styles
+  ========================================
+*/
+
+body {
+  background: #293f50;
+  color: #888;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/*
+  ========================================
   Grid
-  =============================================
+  ========================================
 */
 
 *,
 *:before,
-*:after{
+*:after {
   -webkit-box-sizing: border-box;
-    -moz-box-sizing:  border-box;
+     -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
+.container,
+.grid {
+  margin: 0 auto;
+  width: 960px;
+}
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.col-1-3,
+.col-2-3  {
+  display: inline-block;
+  vertical-align: top;
+}
+.col-1-3 {
+  width: 33.33%;
+}
+.col-2-3 {
+  width: 66.66%;
+}
 
-  .container,
-  .grid {
-    margin: 0 auto;
-    width: 960px;
-  }
-  .container {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
 
-  /*
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  *zoom: 1;
+}
+
+/*
   ========================================
   Typography
   ========================================
 */
 
+h1, h2, h3, h4 {
+  color: #648880;
+}
 h1, h3, h4, h5, p {
   margin-bottom: 22px;
 }
+h1 {
+  font-size: 36px;
+  line-height: 44px;
+}
+h2 {
+  font-size: 24px;
+  line-height: 44px;
+}
+h3 {
+  font-size: 21px;
+}
+h4 {
+  font-size: 18px;
+}
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+strong {
+  font-weight: 400;
+}
+cite,
+em {
+  font-style: italic;
+}
+
+/*
+  ========================================
+  Links
+  ========================================
+*/
+
+a {
+  color: #648880;
+  text-decoration: none;
+}
+a:hover {
+  color: #a9b2b9;
+}
+p a {
+  border-bottom: 1px solid #dfe2e5;
+}
+
 /*
   ========================================
   Buttons
@@ -94,85 +190,165 @@ h1, h3, h4, h5, p {
   border: 1px solid #dfe2e5;
   padding: 10px 30px;
 }
-/*
-  ========================================
-  Home
-  ========================================
-*/
 
-.hero{
-  padding: 20px 80px 66px 80px;
-}
-/*
-  ========================================
-  Clearfix
-  ========================================
-*/
-.group:before,
-.group:after {
-  content:"";
-  display: table;
-}
-.group:after {
-  clear:both;
-}
-.group{
-  clear: both;
-  *zoom:1;
-}
 /*
   ========================================
   Primary header
   ========================================
 */
 
-.logo{
+.logo {
   border-top: 4px solid #648880;
+  float: left;
+  font-size: 48px;
+  font-weight: 100;
+  letter-spacing: .5px;
+  line-height: 44px;
   padding: 40px 0 22px 0;
-  float:left;
+  text-transform: uppercase;
 }
+.tagline {
+  margin: 66px 0 22px 0;
+  text-align: right;
+}
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: .5px;
+  text-transform: uppercase;
+}
+
 /*
   ========================================
   Primary footer
   ========================================
 */
 
-.primary-footer small {
-  float: left;
-}
 .primary-footer {
+  color: #648880;
+  font-size: 14px;
   padding-bottom: 44px;
   padding-top: 44px;
 }
-
-.container,
-.grid{
- margin: 0 auto;
- width: 960px; 
-}
-.container{
-  padding-left: 30px;
-  padding-right: 30px;
-}
-.col-1-3{
-  width: 33.33%;
-}
-.col-2-3{
-  width: 66.66%;
+.primary-footer small {
+  float: left;
+  font-weight: 400;
 }
 
-.col-1-3,
-.col-2-3 {
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+
+.nav {
+  text-align: right;
+}
+
+/*
+  ========================================
+  Home
+  ========================================
+*/
+
+.hero {
+  line-height: 44px;
+  padding: 22px 80px 66px 80px;
+  text-align: center;
+}
+.hero h2 {
+  font-size: 36px;
+}
+.hero p {
+  font-size: 24px;
+  font-weight: 100;
+}
+.teaser a:hover h3 {
+  color: #a9b2b9;
+}
+
+.primary-header a,
+.primary-footer a {
+  color: #fff;
+}
+
+.primary-header a:hover,
+.primary-footer a:hover {
+  color: #648880;
+}
+
+.hero {
+  color: #fff;
+  line-height: 44px;
+  padding: 22px 80px 66px 80px;
+  text-align: center;
+}
+
+.btn {
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
   display: inline-block;
-  vertical-align: top;
+  font-weight: 400;
+  letter-spacing: .5px;
+  margin: 0;
+  text-transform: uppercase;
 }
 
-.grid,
-.col-1-3,
-.col-2-3 {
-  padding-left: 15px;
-  padding-right: 15px;
+.btn-alt {
+  border: 1px solid #fff;
+  padding: 10px 30px;
 }
+
+.btn-alt:hover {
+  background: #fff;
+  color: #648880;
+}
+/*
+  ========================================
+  Rows
+  ========================================
+*/
+
+.row {
+  background: #fff;
+  min-width: 960px;
+  padding: 66px 0 44px 0;
+}
+
+.row,
+.row-alt {
+  min-width: 960px;
+}
+
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+
+.row-alt{
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
+/*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+  text-align: center;
+}
+
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
+}
+
 
 
 
